<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/darkGrey"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:paddingRight="30dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:text=""
            android:layout_gravity="end"
            android:textAlignment="textEnd"
            android:textSize="30sp"
            android:id="@+id/workingsTextView"/>

        <TextView
            android:layout_width="wrap_content"
            android:paddingRight="30dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:text=""
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:textSize="45sp"
            android:id="@+id/resultTextView"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/red"
                android:onClick="clearOnClick"
                android:text="@string/C"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:onClick="bracketsOnClick"
                android:textColor="@color/orange"
                android:text="@string/brackets"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/orange"
                android:onClick="powerOfOnClick"
                android:text="@string/power"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/orange"
                android:onClick="divisionOnClick"
                android:text="@string/slash"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                android:onClick="sevenOnClick"
                android:text="@string/seven"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                android:onClick="eightOnClick"
                android:text="@string/eight"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                android:onClick="nineOnClick"
                android:text="@string/nine"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/orange"
                android:onClick="timesOnClick"
                android:text="@string/X"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/Four"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                android:onClick="fourOnClick"
                android:text="@string/four"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                android:onClick="fiveOnClick"
                android:text="@string/five"/>

            <Button
                android:id="@+id/Six"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                android:onClick="sixOnClick"
                android:text="@string/six"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/orange"
                android:onClick="minusOnClick"
                android:text="@string/minus"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                android:onClick="oneOnClick"
                android:text="@string/one"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                android:text="@string/two"
                android:onClick="twoOnClick"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                android:text="@string/three"
                android:onClick="threeOnClick"/>

            <Button
                android:id="@+id/Plus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/orange"
                android:text="@string/plus"
                android:onClick="plusOnClick"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                android:text="@string/dot"
                android:onClick="decimalOnClick"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                android:text="@string/zero"
                android:onClick="zeroOnClick"/>


            <Button
                android:id="@+id/Equals"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textSize="40sp"
                android:background="@color/orange"
                android:textColor="@color/white"
                android:text="@string/equals"
                android:onClick="equalsOnClick"/>

        </LinearLayout>




    </LinearLayout>


</LinearLayout>
